# cookiecutter-cmake

./: README.md  cookiecutter.json
{{cookiecutter.project_name|lower}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/: CMakeLists.txt  {{cookiecutter.pkgname}}Config.h.in  {{cookiecutter.pkgname}}Config.h.in~
